--- a/client/css/common/base.css
+++ b/client/css/common/base.css
@@ -18,7 +18,7 @@ a {
 body {
   min-width: var(--container-width);
   font: inherit;
-  font-family: "Noto Sans", "malgun gothic", AppleGothic, dotum, sans-serif;
+  font-family: "Pretendard", "Noto Sans", "malgun gothic", AppleGothic, dotum, sans-serif;
   color: #333;
   background-color: #fff;
 }
