--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,5 +1,7 @@
+@import url(./common/reset.css);
 @import url(./common/normalize.css);
 @import url(./common/a11y.css);
+@import url(./common/font.css);
 @import url(./common/theme.css);
 @import url(./common/base.css);
 
