Fix html class name using BEM convention

--- a/client/page/include/product_review.html
+++ b/client/page/include/product_review.html
@@ -33,47 +33,47 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <ul class="main__list">
-              <li class="main__item-notice">
+              <li class="main__item--notice">
                 <p class="notice-label">공지</p>
                 <p class="notice-info">금주의 베스트 후기 안내</p>
               </li>
-              <li class="main__item-notice">
+              <li class="main__item--notice">
                 <p class="notice-label">공지</p>
                 <p class="notice-info">상품 후기 적립금 정책 안내</p>
               </li>
             </ul>
             <ul class="main__list">
-              <li class="main__item-review">
-                <p class="review-label-best">베스트</p>
-                <p class="review-label-rank">퍼플</p>
+              <li class="main__item--review">
+                <p class="review--label-best">베스트</p>
+                <p class="review--label-rank">퍼플</p>
                 <p class="review-user" data-userName="김*진">김*진</p>
-                <div class="review-info">
-                  <p class="review-product-name" data-productName="[풀무원] 탱탱쫄면 (4개입)">[풀무원] 탱탱쫄면 (4개입)</p>
-                  <p class="review-description">너무 맛있어여~</p>
-                  <p class="review-description">면이 쫄깃하고 양념도 짱맛나요!!</p>
-                  <p class="review-date">2022.11.10</p>
+                <div class="review--info">
+                  <p class="review--product-name" data-productName="[풀무원] 탱탱쫄면 (4개입)">[풀무원] 탱탱쫄면 (4개입)</p>
+                  <p class="review--description">너무 맛있어여~</p>
+                  <p class="review--description">면이 쫄깃하고 양념도 짱맛나요!!</p>
+                  <p class="review--date">2022.11.10</p>
                 </div>
               </li>
               <li class="main__item-review">
-                <p class="review-label-best">베스트</p>
-                <p class="review-label-rank">퍼플</p>
-                <p class="review-user" data-userName="김*진">김*진</p>
-                <div class="review-info">
-                  <p class="review-product-name" data-productName="[풀무원] 탱탱쫄면 (4개입)">[풀무원] 탱탱쫄면 (4개입)</p>
-                  <p class="review-description">너무 맛있어여~</p>
-                  <p class="review-description">면이 쫄깃하고 양념도 짱맛나요!!</p>
-                  <p class="review-date">2022.11.10</p>
+                <p class="review--label-best">베스트</p>
+                <p class="review--label-rank">퍼플</p>
+                <p class="review--user" data-userName="김*진">김*진</p>
+                <div class="review--info">
+                  <p class="review--product-name" data-productName="[풀무원] 탱탱쫄면 (4개입)">[풀무원] 탱탱쫄면 (4개입)</p>
+                  <p class="review--description">너무 맛있어여~</p>
+                  <p class="review--description">면이 쫄깃하고 양념도 짱맛나요!!</p>
+                  <p class="review--date">2022.11.10</p>
                 </div>
               </li>
               <li class="main__item-review">
-                <p class="review-label-best">베스트</p>
-                <p class="review-label-rank">퍼플</p>
-                <p class="review-user" data-userName="김*진">김*진</p>
-                <div class="review-info">
-                  <p class="review-product-name" data-productName="[풀무원] 탱탱쫄면 (4개입)">[풀무원] 탱탱쫄면 (4개입)</p>
-                  <p class="review-description">너무 맛있어여~</p>
-                  <p class="review-description">면이 쫄깃하고 양념도 짱맛나요!!</p>
-                  <p class="review-date">2022.11.10</p>
+                <p class="review--label-best">베스트</p>
+                <p class="review--label-rank">퍼플</p>
+                <p class="review--user" data-userName="김*진">김*진</p>
+                <div class="review--info">
+                  <p class="review--product-name" data-productName="[풀무원] 탱탱쫄면 (4개입)">[풀무원] 탱탱쫄면 (4개입)</p>
+                  <p class="review--description">너무 맛있어여~</p>
+                  <p class="review--description">면이 쫄깃하고 양념도 짱맛나요!!</p>
+                  <p class="review--date">2022.11.10</p>
                 </div>
               </li>
             </ul>
