--- a/client/page/include/best_product_list.html
+++ b/client/page/include/best_product_list.html
@@ -5,25 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../../css/style.css" />
-  <title>dealList component</title>
+  <title>Best Product List Component</title>
 </head>
 <body>
   <nav class="best-product__nav">
-    <ul class="nav__list">
-      <li class="nav__item">
-        <button type="button" class="nav__button">필터</button>
-        <button type="button" class="nav__button nav__button--reset">초기화</button>
+    <ul class="best-product__nav__list">
+      <li class="best-product__nav__item">
+        <button type="button" class="best-product__nav__button">필터</button>
+        <button type="button" class="best-product__nav__button nav__button--reset">초기화</button>
       </li>
-      <li class="nav__item">
-        <button type="button" class="nav__button">카테고리</button>
-        <p class="nav__cnt" data-category="1">1</p>
+      <li class="best-product__nav__item">
+        <button type="button" class="best-product__nav__button">카테고리</button>
+        <p class="best-product__nav__item--cnt" data-category="1">1</p>
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
           class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
           <path d="M5 7L9 11L13 7" stroke="#999999" stroke-width="1.2"></path>
         </svg>
       </li>
-      <li class="nav__item is-active">
-        <button type="button" class="nav__button">브랜드</button>
+      <li class="best-product__nav__item best-product__nav__item--focused">
+        <button type="button" class="best-product__nav__button">브랜드</button>
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
           class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
           <path d="M13 11L9 7L5 11" stroke="#999999" stroke-width="1.2"></path>
@@ -46,7 +46,7 @@
               </defs>
             </svg>
             감자밭
-            <p class="nav__cnt" data-gamjabat="1">1</p>
+            <p class="best-product__nav__item--cnt" data-gamjabat="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -65,7 +65,7 @@
               </defs>
             </svg>
             강남면옥
-            <p class="nav__cnt" data-gangnammyeonok="1">1</p>
+            <p class="best-product__nav__item--cnt" data-gangnammyeonok="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -84,7 +84,7 @@
               </defs>
             </svg>
             경남제약
-            <p class="nav__cnt" data-gyeongnamjeyag="1">1</p>
+            <p class="best-product__nav__item--cnt" data-gyeongnamjeyag="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -103,7 +103,7 @@
               </defs>
             </svg>
             경복궁
-            <p class="nav__cnt" data-gyeongboggung="1">1</p>
+            <p class="best-product__nav__item--cnt" data-gyeongboggung="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -122,7 +122,7 @@
               </defs>
             </svg>
             고래사
-            <p class="nav__cnt" data-golaesa="1">1</p>
+            <p class="best-product__nav__item--cnt" data-golaesa="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -141,7 +141,7 @@
               </defs>
             </svg>
             고메공방
-            <p class="nav__cnt" data-gomegongbang="1">1</p>
+            <p class="best-product__nav__item--cnt" data-gomegongbang="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -160,7 +160,7 @@
               </defs>
             </svg>
             고온어다이어트
-            <p class="nav__cnt" data-gooneodaieoteu="1">1</p>
+            <p class="best-product__nav__item--cnt" data-gooneodaieoteu="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -179,7 +179,7 @@
               </defs>
             </svg>
             교토마블
-            <p class="nav__cnt" data-gyotomabeul="1">1</p>
+            <p class="best-product__nav__item--cnt" data-gyotomabeul="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -198,7 +198,7 @@
               </defs>
             </svg>
             그래놀라 하우스
-            <p class="nav__cnt" data-geulaenollahauseu="1">1</p>
+            <p class="best-product__nav__item--cnt" data-geulaenollahauseu="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -217,7 +217,7 @@
               </defs>
             </svg>
             그리츠 시그니처 램
-            <p class="nav__cnt" data-geulicheusigeunicheolaem="1">1</p>
+            <p class="best-product__nav__item--cnt" data-geulicheusigeunicheolaem="1">1</p>
           </li>
           <div>
             브랜드 더보기
@@ -228,29 +228,29 @@
           </div>
         </ul>
       </li>
-      <li class="nav__item">
-        <button type="button" class="nav__button">가격</button>
+      <li class="best-product__nav__item">
+        <button type="button" class="best-product__nav__button">가격</button>
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
           class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
           <path d="M5 7L9 11L13 7" stroke="#999999" stroke-width="1.2"></path>
         </svg>
       </li>
-      <li class="nav__item">
-        <button type="button" class="nav__button">혜택</button>
+      <li class="best-product__nav__item">
+        <button type="button" class="best-product__nav__button">혜택</button>
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
           class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
           <path d="M5 7L9 11L13 7" stroke="#999999" stroke-width="1.2"></path>
         </svg>
       </li>
-      <li class="nav__item">
-        <button type="button" class="nav__button">유형</button>
+      <li class="best-product__nav__item">
+        <button type="button" class="best-product__nav__button">유형</button>
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
           class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
           <path d="M5 7L9 11L13 7" stroke="#999999" stroke-width="1.2"></path>
         </svg>
       </li>
-      <li class="nav__item">
-        <button type="button" class="nav__button">특저상품 제외</button>
+      <li class="best-product__nav__item">
+        <button type="button" class="best-product__nav__button">특저상품 제외</button>
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
           class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
           <path d="M5 7L9 11L13 7" stroke="#999999" stroke-width="1.2"></path>
