--- a/client/css/include/header.css
+++ b/client/css/include/header.css
@@ -14,10 +14,8 @@
 }
 
 .header__inner {
-  /* background-color: yellow; */
   display: flex;
   padding: 0 0 20px 0;
-  justify-content: space-between;
   align-items: center;
   position:relative;
 }
@@ -26,13 +24,11 @@
 .header__logo {
   display: flex;
   margin-top: 63px;
-  /* background-color: darkgray; */
-
 }
 .switch {
-  /* background-color: blueviolet; */
   margin-left: var(--spacing-sm);
   display: flex;
+  position: relative;
 }
 .switch h2{
   font-size: var(--text-lg);
@@ -43,14 +39,35 @@
 }
 .switch--market {
   color:var(--primary);
+  margin-right:25px;
+}
+.switch--market::after{
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 14px;
+  top:50%;
+  left: 50%;
+  margin-top: -7px;
+  margin-left: -8px;
+  background-color: #D9D9D9;
 }
 .switch--beauty {
-  margin-left: var(--spacing-sm);
-  color:var(--gray-400)
+  color:var(--gray-400);
+}
+.switch--beauty::after{
+  content: "";
+  display: inline-block;
+  width: 9px;
+  height: 9px;
+  background:url(/client/assets/sprites.png) no-repeat -406px -350px;
+  margin-left: 6px;
+  margin-bottom: 25px;
 }
 .switch--beauty:hover{
   color:var(--primary)
 }
+
 /* search form */
 .search-form fieldset{
   width:400px;
