--- a/client/css/include/header.css
+++ b/client/css/include/header.css
@@ -6,6 +6,19 @@
 
 /* 공통요소 */
 
+/* input search clear 버튼 숨기기 IE */
+input::-ms-clear,
+input::-ms-reveal{
+    display:none;
+}
+/* input search clear 버튼 숨기기 크롬의  */
+input::-webkit-search-decoration,
+input::-webkit-search-cancel-button,
+input::-webkit-search-results-button,
+input::-webkit-search-results-decoration{
+    display:none;
+}
+
 /* header */
 .header {
   max-width: var(--container-width);
@@ -99,3 +112,105 @@ font-size: var(--text-lg);
   margin-top: -10px;
   cursor: pointer;
   }
+  
+/* header menu */
+.header__menu{
+  position: absolute;
+  margin-top: 12px;
+  top:0;
+  right: 0;
+  padding-left: 0;
+  width: 178px;
+}
+.header__menu li {
+  display: inline-block;
+  font-size: var(--text-xs);
+  font-weight: 400;
+  line-height: 19.2px;
+  position: relative;
+}
+
+.header__menu a{
+  padding : 4px 0; 
+  display : inline-block;
+}
+.header__menu li:first-child{
+  color: var(--primary);
+  margin-right: 20px;
+}
+.header__menu li:nth-child(2){
+  margin-right: 20px;
+}
+
+.header__menu li:first-child::after,
+.header__menu li:nth-child(2)::after{
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 13px;
+  top:50%;
+  background-color: #D9D9D9;
+  margin-top: -7px;
+  margin-left: 10px;
+}
+
+.header__menu li:first-child::after{
+left: 42px;
+}
+.header__menu li:nth-child(2)::after{
+  left: 33px;
+}
+
+.header__menu li:last-child ::after {
+    content: "";
+    display: inline-block;
+    width: 9px;
+    height: var(--spacing-xs);
+    background: url(/client/assets/sprites.png)  no-repeat -406px -323px;
+    width: 8px;
+    height: 7px;
+    margin-left: 4px;
+  }
+
+/* header submenu */
+.header__submenu{
+  list-style: none;
+  display: none;
+}
+.header__submenu .is-active{
+  display: block;
+}
+
+/* header list */
+.header__list__wrapper{
+  display: flex;
+  gap:20px;
+  position: absolute;
+  right: 0;
+  margin-top: 66px;
+  height: 36px;
+  padding: 0;
+}
+.header__list__wrapper li {
+  display: inline-block;
+  margin: 0;
+  width: 36px;
+  height: 36px;
+}
+.list__shipping-address {
+  display: block;
+  background: url(/client/assets/sprites.png) no-repeat -198px -279px;
+	width: 100%;
+	height: 100%;
+}
+.list__favotite-product {
+  display: block;
+  background: url(/client/assets/sprites.png) no-repeat -143px -279px;
+	width: 100%;
+	height: 100%;
+}
+.list__shopping-cart {
+  display: block;
+  background: url(/client/assets/sprites.png) no-repeat -249px -171px;
+	height: 100%;
+}
