--- a/client/page/include/best_product_list.html
+++ b/client/page/include/best_product_list.html
@@ -8,22 +8,22 @@
   <title>Best Product List Component</title>
 </head>
 <body>
-  <nav class="best-product__nav">
-    <ul class="best-product__nav__list">
-      <li class="best-product__nav__item">
-        <button type="button" class="best-product__nav__button">필터</button>
-        <button type="button" class="best-product__nav__button best-product__nav__button--reset">초기화</button>
+  <div class="best-product__condition">
+    <ul class="best-product__condition__list">
+      <li class="best-product__condition__item">
+        <button type="button" class="best-product__condition__button">필터</button>
+        <button type="button" class="best-product__condition__button best-product__condition__button--reset">초기화</button>
       </li>
-      <li class="best-product__nav__item">
-        <button type="button" class="best-product__nav__button">카테고리<p class="best-product__nav__item--category-cnt" data-category="1">1</p></button>
+      <li class="best-product__condition__item">
+        <button type="button" class="best-product__condition__button">카테고리<p class="best-product__condition__item--category-cnt" data-category="1">1</p></button>
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
           class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
           <path d="M5 7L9 11L13 7" stroke="#999999" stroke-width="1.2"></path>
         </svg>
       </li>
-      <li class="best-product__nav__item--focused">
-        <div class="best-product__nav__item--focused-title">
-          <button type="button" class="best-product__nav__button">브랜드</button>
+      <li class="best-product__condition__item--focused">
+        <div class="best-product__condition__item--focused-title">
+          <button type="button" class="best-product__condition__button">브랜드</button>
           <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
             class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
             <path d="M13 11L9 7L5 11" stroke="#999999" stroke-width="1.2"></path>
@@ -46,7 +46,7 @@
                 </clipPath>
               </defs>
             </svg>
-            <p class="best-product__nav__item--name">감자밭<p class="best-product__nav__item--name-cnt" data-gamjabat="1">1</p>
+            <p class="best-product__condition__item--name">감자밭<p class="best-product__condition__item--name-cnt" data-gamjabat="1">1</p>
             </p>
           </li>
           <li>
@@ -65,7 +65,7 @@
                 </clipPath>
               </defs>
             </svg>
-            <p class="best-product__nav__item--name">강남면옥<p class="best-product__nav__item--name-cnt" data-gangnammyeonog="1">1</p>
+            <p class="best-product__condition__item--name">강남면옥<p class="best-product__condition__item--name-cnt" data-gangnammyeonog="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -83,7 +83,7 @@
                 </clipPath>
               </defs>
             </svg>
-            <p class="best-product__nav__item--name">경남제약<p class="best-product__nav__item--name-cnt" data-gamjabat="1">1
+            <p class="best-product__condition__item--name">경남제약<p class="best-product__condition__item--name-cnt" data-gamjabat="1">1
               </p>
           </li>
           <li>
@@ -102,7 +102,7 @@
                 </clipPath>
               </defs>
             </svg>
-            <p class="best-product__nav__item--name">경복궁<p class="best-product__nav__item--name-cnt" data-gyeongboggung="1">1</p>
+            <p class="best-product__condition__item--name">경복궁<p class="best-product__condition__item--name-cnt" data-gyeongboggung="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -120,7 +120,7 @@
                 </clipPath>
               </defs>
             </svg>
-            <p class="best-product__nav__item--name">고래사<p class="best-product__nav__item--name-cnt" data-golaesa="1">1</p>
+            <p class="best-product__condition__item--name">고래사<p class="best-product__condition__item--name-cnt" data-golaesa="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -138,7 +138,7 @@
                 </clipPath>
               </defs>
             </svg>
-            <p class="best-product__nav__item--name">고메공방<p class="best-product__nav__item--name-cnt" data-gomegongbang="1">1</p>
+            <p class="best-product__condition__item--name">고메공방<p class="best-product__condition__item--name-cnt" data-gomegongbang="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -156,7 +156,7 @@
                 </clipPath>
               </defs>
             </svg>
-            <p class="best-product__nav__item--name">고온어다이어트<p class="best-product__nav__item--name-cnt" data-gooneodiet="1">1</p>
+            <p class="best-product__condition__item--name">고온어다이어트<p class="best-product__condition__item--name-cnt" data-gooneodiet="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -174,7 +174,7 @@
                 </clipPath>
               </defs>
             </svg>
-            <p class="best-product__nav__item--name">교토마블<p class="best-product__nav__item--name-cnt" data-gyotomabeul="1">1</p>
+            <p class="best-product__condition__item--name">교토마블<p class="best-product__condition__item--name-cnt" data-gyotomabeul="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -192,7 +192,7 @@
                 </clipPath>
               </defs>
             </svg>
-            <p class="best-product__nav__item--name">그래놀라 하우스<p class="best-product__nav__item--name-cnt" data-geulaenollahouse="1">1</p>
+            <p class="best-product__condition__item--name">그래놀라 하우스<p class="best-product__condition__item--name-cnt" data-geulaenollahouse="1">1</p>
           </li>
           <li>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -210,7 +210,7 @@
                 </clipPath>
               </defs>
             </svg>
-            <p class="best-product__nav__item--name">그리츠 시그니처 램<p class="best-product__nav__item--name-cnt" data-gritssignalram="1">1</p>
+            <p class="best-product__condition__item--name">그리츠 시그니처 램<p class="best-product__condition__item--name-cnt" data-gritssignalram="1">1</p>
           </li>
           <div>
             <p>브랜드 더보기</p>
@@ -221,35 +221,35 @@
           </div>
         </ul>
       </li>
-      <li class="best-product__nav__item">
-        <button type="button" class="best-product__nav__button">가격</button>
+      <li class="best-product__condition__item">
+        <button type="button" class="best-product__condition__button">가격</button>
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
           class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
           <path d="M5 7L9 11L13 7" stroke="#999999" stroke-width="1.2"></path>
         </svg>
       </li>
-      <li class="best-product__nav__item">
-        <button type="button" class="best-product__nav__button">혜택</button>
+      <li class="best-product__condition__item">
+        <button type="button" class="best-product__condition__button">혜택</button>
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
           class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
           <path d="M5 7L9 11L13 7" stroke="#999999" stroke-width="1.2"></path>
         </svg>
       </li>
-      <li class="best-product__nav__item">
-        <button type="button" class="best-product__nav__button">유형</button>
+      <li class="best-product__condition__item">
+        <button type="button" class="best-product__condition__button">유형</button>
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
           class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
           <path d="M5 7L9 11L13 7" stroke="#999999" stroke-width="1.2"></path>
         </svg>
       </li>
-      <li class="best-product__nav__item">
-        <button type="button" class="best-product__nav__button">특저상품 제외</button>
+      <li class="best-product__condition__item">
+        <button type="button" class="best-product__condition__button">특저상품 제외</button>
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
           class="flex-grow-0 flex-shrink-0 w-[18px] h-[18px] relative" preserveAspectRatio="none">
           <path d="M5 7L9 11L13 7" stroke="#999999" stroke-width="1.2"></path>
         </svg>
       </li>
     </ul>
-  </nav>
+  </condition>
 </body>
 </html>
